--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atividade</title>
 </head>
+<style>
+    body {
+    font-family: Arial, sans-serif;
+    text-align: center;
+    margin-top: 50px;
+}
+
+input {
+    margin: 10px;
+    padding: 10px;
+    width: 100px;
+}
+
+button {
+    padding: 10px 20px;
+    cursor: pointer;
+}
+</style>
 <body>
     <h1>Calculando Números</h1>
     <input type="number" id="num1" placeholder="Número 1">
