--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,28 +8,44 @@
 </head>
 <style>
     body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-    margin-top: 50px;
-}
+        font-family: Arial, sans-serif;
+        text-align: center;
+        margin-top: 50px;
+    }
 
-input {
-    margin: 10px;
-    padding: 10px;
-    width: 100px;
-}
+    input {
+        margin: 10px;
+        padding: 10px;
+        width: 100px;
+    }
 
-button {
-    padding: 10px 20px;
-    cursor: pointer;
-}
+    button {
+        padding: 10px 20px;
+        cursor: pointer;
+    }
 </style>
+
 <body>
     <h1>Calculando Números</h1>
     <input type="number" id="num1" placeholder="Número 1">
     <input type="number" id="num2" placeholder="Número 2">
     <button id="calcButton">Calcular</button>
     <h2 id="result"></h2>
-    
+    <script>
+
+        document.getElementById('calcButton').addEventListener('click', function () {
+            const num1 = parseFloat(document.getElementById('num1').value);
+            const num2 = parseFloat(document.getElementById('num2').value);
+
+            if (isNaN(num1) || isNaN(num2)) {
+                document.getElementById('result').textContent = "Por favor, insira números válidos.";
+                return;
+            }
+
+            const result = num1 + num2;
+            document.getElementById('result').textContent = `Resultado: ${result}`;
+        });
+    </script>
 </body>
+
 </html>
